--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
+    "cheerio": "^1.1.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
