--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "recharts": "^3.3.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
